Updated thesis format to use parts and chapters Replaced natbib with biblatex for easier bibliography management

--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -222,7 +222,7 @@ Entre los códigos de modelos de atmósferas estelares más utilizados está el 
 \code{ATLAS} escrito por Robert L. Kurucz. A continuación se especifican las
 suposiciones empleadas en el código de \code{ATLAS} descritas en
 \citetbookchapter{phoebeScientificReference}{4.2}; para una discusión completa
-del programa es necesario hacer referencia a \citet{kurucz_atlas_1970}.
+del programa es necesario hacer referencia a \autocite{kurucz_atlas_1970}.
 
 Este modelo parte de las condiciones del \textit{equilibrio hidrostático} y el
 \textit{equilibrio termodinámico local} para una estrella, lo cual simplifica el
