--- a/Introduccion/Subsecciones/EnanaBlanca.tex
+++ b/Introduccion/Subsecciones/EnanaBlanca.tex
@@ -20,7 +20,7 @@ estrella con su luminosidad, dada en términos de luminosidad solar.
 	mantiene la forma de la estrella. Esta deformación provoca una oscilación en
 	su tamaño, causado por las fluctuaciones del balance entre la presión
 	radiativa generada por las reacciones nucleares en el núcleo contra la
-	presión gravitacional. Diagrama obtenido de \citet{astronomyPhysicalPerspective_stellarOldAgeChapter}}
+	presión gravitacional. Diagrama obtenido de \autocite{astronomyPhysicalPerspective_stellarOldAgeChapter}}
 	\label{evolucionMSEstrella}
 \end{figure}
 
