--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -38,7 +38,7 @@ infra-rojo en ciertos casos. Tomando en cuenta el sistema completo, se puede
 observar en la distribución de variables cataclísmicas en el diagrama
 Hertzsprung-Russell que la mayoría reside entre las regiones de enanas blancas y
 la secuencia principal dependiendo de la contribución relativa de sus estrellas
-componentes. \citet{disentanglingGaiaHR} No siempre ocurre algún tipo de
+componentes. \autocite{disentanglingGaiaHR} No siempre ocurre algún tipo de
 interacción entre las estrellas componentes dentro del sistema; esto va a
 depender de los volúmenes de las estrellas y la distancia entre ellas, ya que la
 manera principal en que interactúan entre si es en base a su atracción
@@ -74,7 +74,7 @@ magnético de esta misma estrella. \\\newline
 	\includegraphics[scale=0.4]{Introduccion/Figures/Figura Acrecion_SmithReview.png}
 	\caption{Diagrama de una estrella enana blanca absorbiendo material de su
 		compañera estrella de secuencia principal por medio de la interacción de sus
-		lóbulos de Roche.} \citet{smithReview}
+		lóbulos de Roche.} \autocite{smithReview}
 	\label{acrecionSmithReview}
 \end{figure}
 
@@ -88,7 +88,7 @@ mismas propiedades en sus componentes existen diferentes tipos de estallidos:
 Los novae clásicos son aquellos estallidos observados en sistemas binarios que
 causa que su luminosidad aumente por varias magnitudes en una escala de tiempo
 relativamente corta (puede ser en la escala de días hasta meses).
-\citet{smithReview} Aparte de la radiación generada debido a reacciones
+\autocite{smithReview} Aparte de la radiación generada debido a reacciones
 termonucleares, los novae expulsan un entorno de gas caliente a grandes
 velocidades, llegando a miles de kilómetros por segundo. Pocos sistemas binarios
 muestran nova recurrentes a lo largo del tiempo en intervalos de decenas o
