--- a/Metodologia/Metodologia.tex
+++ b/Metodologia/Metodologia.tex
@@ -1,4 +1,4 @@
-\chapter{Metodología} \label{metodologia}
+\part{Metodología y Análisis de Datos} \label{metodologia}
 
 \input{Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex}
 \input{Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex}
