--- a/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
+++ b/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
@@ -1,4 +1,4 @@
-\section{Análisis del Periodo Orbital} \label{metodologia:analisisperiodo}
+\chapter{Periodo Orbital} \label{metodologia:analisisperiodo}
 
 Una de las propiedades más importantes presente en la curva de luz de una
 binaria eclipsante es su \textbf{periodo orbital}. Partiendo del periodo orbital
