--- a/Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex
+++ b/Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex
@@ -1,4 +1,4 @@
-\section{Modelo Computacional} \label{metodologia:modelocomputacional}
+\chapter{Modelo Computacional} \label{metodologia:modelocomputacional}
 
 Usando todas las curvas de luz disponible para el sistema \atoObjId --- tanto de
 Gaia como los datos recabados de Iturbide --- se puede generar un modelo
@@ -10,5 +10,5 @@ plasma el proceso que se llevó a cabo para llegar a una solución fotométrica 
 sistema \atoObjIdNoSpace; esta solución no es única en el sentido que otra
 combinación de parámetros podría llegar a las mismas conclusiones.
 
-\input{Metodologia/Secciones/ModeloComputacional/Subsecciones/EstimacionesIniciales}
-\input{Metodologia/Secciones/ModeloComputacional/Subsecciones/Optimizaciones.tex}
+\input{Metodologia/Secciones/ModeloComputacional/Secciones/EstimacionesIniciales}
+\input{Metodologia/Secciones/ModeloComputacional/Secciones/Optimizaciones.tex}
