--- a/Metodologia/Secciones/ModeloComputacional/Secciones/EstimacionesIniciales.tex
+++ b/Metodologia/Secciones/ModeloComputacional/Secciones/EstimacionesIniciales.tex
@@ -1,4 +1,4 @@
-\subsection{Estimaciones Iniciales}
+\section{Estimaciones Iniciales}
 \label{metodologia:modelocomputacional:estimacionesiniciales}
 
 Una vez determinado el periodo orbital del sistema se puede empezar un estudio
@@ -29,7 +29,7 @@ una combinación de curvas de luz de Gaia e Iturbide. El experimento completo
 junto a sus curvas de luz sintéticas correspondientes se pueden ver en el
 Notebook antedicho, acompañado de las gráficas resultantes de cada estimador.
 
-\subsubsection{Elección del Modelo Inicial}
+\subsection{Elección del Modelo Inicial}
 \label{metodologia:modelocomputacional:estimacionesiniciales:eligiendomodeloinicial}
 
 Una consideración importante en el proceso de modelación computacional es la
