--- a/Metodologia/Secciones/ModeloComputacional/Secciones/Optimizaciones.tex
+++ b/Metodologia/Secciones/ModeloComputacional/Secciones/Optimizaciones.tex
@@ -1,4 +1,4 @@
-\subsection{Optimización de Parámetros}
+\section{Optimización de Parámetros}
 
 Como se puede ver en la \reffigure{ebaiKnnGaiaEstimateModel} el modelo inicial
 de PHOEBE no se ajusta perfectamente bien a los dados datos observacionales. Los
