--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -1,4 +1,4 @@
-\section{Normalización de Flujos} \label{Metodologia:NormalizacionFlujos}
+\chapter{Normalización de Flujos} \label{Metodologia:NormalizacionFlujos}
 
 Tenemos a nuestra disposición las cuentas de fotones que corresponden a sus
 magnitudes para las curvas de luz de Gaia, para las cuales el flujo reportado es
@@ -22,7 +22,7 @@ consistentes al momento de desarrollar el modelo computacional en PHOEBE.
 	\label{normFlujosEcuacion}
 \end{eqfloat}
 
-\subsection{Preservación de Color}
+\section{Preservación de Color}
 
 % TODO: figure out how to cite specific chapter of PHOEBE textbook (page 111) without having to create a bunch of citations for each section used
 	% ideally would mention the chapters/pages used in a single citation
