--- a/Muestra/Muestra.tex
+++ b/Muestra/Muestra.tex
@@ -1,4 +1,4 @@
-\chapter{Muestra}
+\part{Muestra}
 
 % Este trabajo tiene como objetivo principal producir datos fotométricos de
 % estrellas marcadas como candidatas a variables cataclísmicas. Debido a la
