--- a/Muestra/Secciones/ATO_Objeto.tex
+++ b/Muestra/Secciones/ATO_Objeto.tex
@@ -1,6 +1,6 @@
 \section{ATO J339.9469+45.1464 - EclBin\_Candidate}
 
-\citet{atlasATOObjectDiscovery} es un estudio donde se realizó una búsqueda de
+\autocite{atlasATOObjectDiscovery} es un estudio donde se realizó una búsqueda de
 estrellas variables dentro del catálogo del \textbf{Asteroid Terrestrial-impact
 Last Alert System} (\textbf{ATLAS}), aprovechando su cobertura de
 aproximadamente \num{13000} $\mathrm{deg}^2$ al menos 4 veces por noche. Esta
@@ -19,9 +19,6 @@ información acerca de ella. Tiene una magnitud promedio de aproximadamente
 \num{16.91}, lo cual lo hace un sistema tenue. Con una ascensión recta de
 \code{22 39 47.2569} y declinación de \code{+45 08 47.0311}, \textbf{\atoObjId}
 es un sistema ideal para observar desde el OAU en Iturbide.
-
-% TODO: dejar este break aquí para mantener subsección de Gaia junto?
-\newpage
 
 \subsection{Datos de Gaia}
 
@@ -42,7 +39,7 @@ temperaturas de las estrellas individuales.
 	\caption{Magnitud de \atoObjId registrada en la base de datos de Gaia DR3.
 	Se puede apreciar la variabilidad de aproximadamente 0.5 mag en el brillo
 	del sistema, la cual la atribuimos a la presencia de eclipses en el sistema
-	binario. \citet{gdr3ReleaseDocumentation}}
+	binario. \autocite{gdr3ReleaseDocumentation}}
 	\label{gdr3AtoObjLightCurves}
 \end{figure}
 
