--- a/Tesis.tex
+++ b/Tesis.tex
@@ -17,14 +17,17 @@
 \usepackage{booktabs, multirow}
 \usepackage[normalem]{ulem}
 \usepackage[colorlinks,linkcolor=MyDarkBlue,urlcolor=blue,citecolor=blue]{hyperref}
-\usepackage{natbib}
-\bibliographystyle{apalike}
 \usepackage[nottoc]{tocbibind}
 \usepackage{url}
 \usepackage[spanish,es-nodecimaldot]{babel}
 \usepackage[group-digits=true,group-minimum-digits=4]{siunitx}
 \usepackage{xcoffins}
 \usepackage{sty/annotate-equations}
+\usepackage{mathtools}
+
+\usepackage{csquotes}
+\usepackage[style=authoryear, natbib=true]{biblatex}
+\addbibresource[]{ref.bib}
 
 \ExplSyntaxOn
 \NewCoffin\imagecoffin
@@ -102,6 +105,22 @@
 
 \ExplSyntaxOff
 
+% region absolute magnitude symbols https://tex.stackexchange.com/questions/43008/absolute-value-symbols#43009
+\DeclarePairedDelimiter\abs{\lvert}{\rvert}%
+\DeclarePairedDelimiter\norm{\lVert}{\rVert}%
+
+% Swap the definition of \abs* and \norm*, so that \abs
+% and \norm resizes the size of the brackets, and the 
+% starred version does not.
+\makeatletter
+\let\oldabs\abs
+\def\abs{\@ifstar{\oldabs}{\oldabs*}}
+%
+\let\oldnorm\norm
+\def\norm{\@ifstar{\oldnorm}{\oldnorm*}}
+\makeatother
+% endregion
+
 \sisetup{
     text-series-to-math = true ,
     propagate-math-font = true
@@ -170,7 +189,7 @@
 \newcommand{\gaia}{\gaiaNoSpace \space}
 \newcommand{\quotes}[1]{``#1''}
 \newcommand{\code}[1]{\texttt{#1}}
-\newcommand{\brakcite}[1]{[\citet{#1}]}
+\newcommand{\brakcite}[1]{[\autocite{#1}]}
 
 % https://tex.stackexchange.com/questions/11031/how-to-do-the-curvy-l-for-lagrangian-or-laplace-transforms#11144
 \newcommand{\Lagr}{\mathcal{L}}
@@ -197,7 +216,7 @@
 {\color{SubSubSectionBlue}\thesubsubsection}{1em}{}
 \DeclareCaptionFont{myblue}{\color{SubSectionBlue}}
 \captionsetup{labelfont={myblue,bf}}
-\setcitestyle{authoryear, open={(},close={)}}
+% \setcitestyle{authoryear, open={(},close={)}}
 \setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{3}
 %------------------------------------------------------------------------------------
@@ -210,12 +229,13 @@
 \newcommand{\reffigure}[1]{{\color{MyDarkGreen}\textbf{Figura \ref{#1}}}}
 \newcommand{\quotetable}[1]{{\color{MyDarkGreen}\textbf{Tabla \ref{#1}}}}
 \newcommand{\refequation}[1]{{\color{MyDarkGreen}\textbf{Ecuación \ref{#1}}}}
+\newcommand{\refequations}[1]{{\color{MyDarkGreen}\textbf{Ecuaciones \ref{#1}}}}
 \newcommand{\textapproxtilde}{\raisebox{-0.55ex}{\textasciitilde}}
-\newcommand{\citetbookchapter}[2]{\citet*[\textcolor{MyLightBlue}{Capítulo #2}]{#1}}
+\newcommand{\citetbookchapter}[2]{\autocite[\textcolor{MyLightBlue}{Capítulo #2}]{#1}}
 
 % https://tex.stackexchange.com/questions/148634/no-caption-or-title-but-entry-in-list-of-figures#148637
 \DeclareCaptionLabelFormat{blank}{}
-\newcommand{\blankcaption}{\captionsetup{textformat=empty,labelformat=blank} \caption{}}
+\newcommand{\blankcaption}{\captionsetup{textformat=empty,labelformat=blank} \caption{} \vspace{-1.7em}}
 %------------------------------------------------------------------------------------
 \geometry{
 	paper=a4paper, % Change to letterpaper for US letter
@@ -357,14 +377,14 @@
 \pagenumbering{arabic}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapters
-\include{Introduccion/Introduccion.tex}
-\include{Muestra/Muestra.tex}
-\include{Observaciones/Observaciones}
-\include{Metodologia/Metodologia.tex}
+\input{Introduccion/Introduccion.tex}
+\input{Muestra/Muestra.tex}
+\input{Observaciones/Observaciones}
+\input{Metodologia/Metodologia.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Appendix
 \appendix
-\include{Apendice/GaiaADQL.tex}
+\input{Apendice/GaiaADQL.tex}
 %-------------------------------------REFERENCES
 \chapter*{Agradecimientos}
 This work has made use of data from the European Space Agency (ESA) mission {\it
@@ -375,14 +395,15 @@ has been provided by national institutions, in particular the institutions
 participating in the {\it Gaia} Multilateral Agreement.
 
 This research made use of Astropy,\footnote{\url{http://www.astropy.org}} a
-community-developed core Python package for Astronomy \citet{astropy}.
+community-developed core Python package for Astronomy \autocite{astropy}.
 
 This research has made use of the SIMBAD database, operated at CDS, Strasbourg, France.
 
 This research made use of ccdproc, an Astropy package for
-image reduction \citet{ccdproc241}.
+image reduction \autocite{ccdproc241}.
 \clearpage
 
-\bibliography{ref}
+% \bibliography{ref}
+\printbibliography
 
 \end{document}
