Inserted abstract reminder

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -1,6 +1,8 @@
 % \chapter{Introducción}
 \part{Introducción}
 
+% TODO: make abstract
+
 \input{Introduccion/Estrella.tex}
 \input{Introduccion/SistemasBinarios.tex}
 % \input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
