--- a/Metodologia/Metodologia.tex
+++ b/Metodologia/Metodologia.tex
@@ -1,4 +1,6 @@
-\part{Metodología y Análisis de Datos} \label{metodologia}
+\part{Metodología y Análisis de Datos}
+
+% TODO: make abstract
 
 \input{Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex}
 \input{Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex}
