--- a/Muestra/Muestra.tex
+++ b/Muestra/Muestra.tex
@@ -1,5 +1,7 @@
 \part{Muestra}
 
+% TODO: make abstract
+
 % Este trabajo tiene como objetivo principal producir datos fotométricos de
 % estrellas marcadas como candidatas a variables cataclísmicas. Debido a la
 % escasez de variables cataclísmicas en la literatura---solo 1093 variables
