Updated reference commands to allow for intellisense

--- a/Metodologia/Secciones/ModeloComputacional/Secciones/EstimacionesIniciales.tex
+++ b/Metodologia/Secciones/ModeloComputacional/Secciones/EstimacionesIniciales.tex
@@ -52,7 +52,7 @@ fotometría de Gaia normalizada. Los parámetros de este estimador fueron
 idénticos al estimador que utilizó los datos directos de la base de datos de
 Gaia. El resultado inicial del modelo se puede ver en la
 \reffigure{ebaiKnnGaiaEstimateModel}, junto a los parámetros del modelo en la
-\quotetable{ebaiKnnInitialEstimationsValues}.
+\reftable{ebaiKnnInitialEstimationsValues}.
 
 \begin{figure}[!ht]
 	\centering
