--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -29,7 +29,7 @@ consistentes al momento de desarrollar el modelo computacional en PHOEBE.
 Gracias a las observaciones en varias pasa bandas tenemos información del color
 del sistema, debido a la diferencia de magnitud. Sin embargo PHOEBE trabaja solo
 con flujos, por lo cual la transformación descrita en la
-\quotesection{Metodologia:NormalizacionFlujos} fue necesaria. Para preservar el
+\refthesissection{Metodologia:NormalizacionFlujos} fue necesaria. Para preservar el
 color por diferencia de magnitud se determina un solo valor de $m_0$ con el cual
 convertir las magnitudes; este $m_0$ corresponde a la magnitud en 0.25 de fase
 del pasa bandas más tenue del sistema. PHOEBE tablas de coeficientes que
