--- a/Observaciones/Secciones/Fotometria.tex
+++ b/Observaciones/Secciones/Fotometria.tex
@@ -3,7 +3,7 @@
 Para este trabajo se realizó una campaña de observación durante los últimos
 meses del 2022, con la finalidad de observar el sistema durante una fase orbital
 completa. Las fechas y duraciones de cada día de observación se encuentra en la
-\quotetable{observationSchedules}. Durante varias de estas noches de observación
+\reftable{observationSchedules}. Durante varias de estas noches de observación
 las condiciones del sitio fueron menos que ideal; tanto las condiciones
 meteorológicas como contratiempos causados por el equipo en si causaron
 interrupciones en la medición del brillo del sistema. Esto es esperado en un
